--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 	</head>
 
-	<body class="app sidebar-mini" style="background-color: #b9d039;">
+	<body class="app sidebar-mini" style="background-color: #fff;">
 
 		<!--Loader-->
 		<div id="global-loader">
@@ -84,15 +84,14 @@
                         </aside>
 
 						<!--Page-Header-->
-						<div class="page-header">
-							<h1 style="text-align: center;">Modhumoti Bank Limited</h1>
-
+						<div class="page-header" style="background-color: #007942;">
+							<h1 style="color:white"><b>Modhumoti Bank Limited</b></h1>
 						</div>
 
-							<button type="submit" class="btn btn-primary "><a href="Html-Admin/Fixed_Deposit.html">Fixed_deposit Form</a></button>
-							<button type="submit" class="btn btn-primary "><a href="Html-Admin/Individual.html">Individual Form</a></button>
-							<button type="submit" class="btn btn-primary "><a href="Html-Admin/non-individual.html">Non-Individual Form</a></button>
-							<button type="submit" class="btn btn-primary "><a href="Html-Admin/Govt_Acc.html">Government Account Form</a></button>
+							<button type="submit" style="background-color: #ff9999;" class="btn btn-primary "><a href="Html-Admin/Fixed_Deposit.html">Fixed_deposit Form</a></button>
+							<button type="submit" style="background-color: #ff9999;" class="btn btn-primary "><a href="Html-Admin/Individual.html">Individual Form</a></button>
+							<button type="submit" style="background-color: #ff9999;" class="btn btn-primary "><a href="Html-Admin/non-individual.html">Non-Individual Form</a></button>
+							<button type="submit" style="background-color: #ff9999;" class="btn btn-primary "><a href="Html-Admin/Govt_Acc.html">Government Account Form</a></button>
 
 						</div>
 					</div>
@@ -156,5 +155,3 @@
 
 	</body>
 </html>
-
-
