--- a/Html-Admin/Individual.html
+++ b/Html-Admin/Individual.html
@@ -52,7 +52,7 @@
 
 	</head>
 
-	<body class="app sidebar-mini" style="background-color: #b9d039;">
+	<body class="app sidebar-mini" style="background-color: #fff;">
 
 		<!--Loader-->
 		<div id="global-loader">
@@ -65,7 +65,7 @@
 			<div class="page-main">
 
 				<!--App-Header-->
-				
+
 				<!--/App-Header-->
 
 				<!--App-Content-->
@@ -78,15 +78,30 @@
 						<div>
 							<div>
 								<img src="../assets/images/faces/male/logo.jpg">
+								<br>
+								<br>
+								<br>
+								<button type="submit" style="background-color: #ff9999; width:200px;" class="btn btn-primary "><a href="Fixed_Deposit.html">Fixed_deposit Form</a></button> <br><br>
+								<button type="submit" style="background-color: #ff9999; width:200px;" class="btn btn-primary "><a href="Individual.html">Individual Form</a></button> <br><br>
+								<button type="submit" style="background-color: #ff9999; width:200px;" class="btn btn-primary "><a href="non-individual.html">Non-Individual Form</a></button> <br><br>
+								<button type="submit" style="background-color: #ff9999; width:200px;" class="btn btn-primary "><a href="Govt_Acc.html">Government Account Form</a></button> <br><br>
+								<form class="form-inline mr-auto">
+									<div class="nav-search">
+										<input type="search" class="form-control header-search" placeholder="Search…" aria-label="Search" >
+										<button class="btn btn-primary" type="submit"><i class="fa fa-search"></i></button>
+									</div>
+								</form>
+								<br>
+								<button type="submit" style="background-color: #ff9999; width:200px;" class="btn btn-primary ">Print the form</button> <br><br>
 							</div>
 						</div>
 					</div>
 				</aside>
 
 						<!--Page-Header-->
-						<div class="page-header">
-							<h1 style="text-align: center;">Individual (Transactional A/C) KYC profile form</h1>
-							
+						<div class="page-header" style="background-color: #007942;">
+							<h1 style="color:white"><b>Individual (Transactional A/C) KYC profile form</b></h1>
+
 						</div>
 						<!--/Page-Header-->
 
@@ -841,5 +856,3 @@
 
 	</body>
 </html>
-
-
