--- a/Html-Admin/Govt_Acc.html
+++ b/Html-Admin/Govt_Acc.html
@@ -7,8 +7,7 @@
 		<meta charset="UTF-8">
 		<meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=0'>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta content="Reallist- Bootstrap Responsive Real estate Classifieds, Dealer, Rentel, Builder and Agent Multipurpose HTML Template" name="description">
-		<meta content="Spruko Technologies Private Limited" name="author">
+		<meta content="Modhumoti Bank Limited" name="description">
 		<meta name="keywords" content="html template, real estate websites, real estate html template, property websites, premium html templates, real estate company website, bootstrap real estate template, real estate marketplace html template, listing website template, property listing html template, real estate bootstrap template, real estate html5 template, real estate listing template, property template, property dealer website"/>
 
 		<!-- Favicon -->
